--- a/css/style.css
+++ b/css/style.css
@@ -693,6 +693,42 @@ a {
   fill: currentColor;
 }
 
+/* MAILING */
+
+.subscribe {
+  margin-left: 93px;
+}
+
+.subscribe-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.subscribe-input {
+  width: 358px;
+  height: 50px;
+  background-color: var(--bg-color-acent);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding-left: 15px;
+  color: var(--white-color);
+}
+
+.subscribe-form .btn {
+  position: relative;
+  margin-left: 12px;
+  padding-right: 35px;
+}
+
+.subscribe-icon {
+  position: absolute;
+  right: 25px;
+  bottom: 14px;
+}
+
 /* ! PORTFOLIO STYLE */
 
 .filter-btn {
