--- a/css/style.css
+++ b/css/style.css
@@ -71,10 +71,6 @@ a {
   line-height: 1.2;
 }
 
-.logo-header {
-  padding: 24px 0;
-}
-
 .logo-header span,
 .logo-footer span {
   color: var(--acent-color);
@@ -87,7 +83,7 @@ a {
 .container {
   margin-left: auto;
   margin-right: auto;
-  max-width: 1200px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -168,7 +164,6 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 32px 0;
   transition: color 250ms var(--timing-fn);
 }
 
