--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
 img {
   display: block;
   height: auto;
+  max-width: 100%;
 }
 
 ul,
@@ -114,7 +115,7 @@ a {
   display: flex;
 }
 
-.nav-item {
+.nav-item:not(:last-child) {
   margin-right: 50px;
   position: relative;
 }
@@ -249,12 +250,7 @@ a {
 }
 
 .hero-btn {
-  transform: scale(1);
   transition: transform 250ms var(--timing-fn);
-}
-
-.hero-btn:hover {
-  transform: scale(1.2);
 }
 
 .btn {
@@ -572,20 +568,19 @@ a {
 
 .team-text {
   padding-top: 10px;
+  margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.2;
   color: var(--secondary-text-color);
 }
 
 .team-container {
-  padding: 30px 0;
+  padding: 30px 32px;
 }
 
 .team-icon-list {
   display: flex;
   justify-content: space-between;
-  margin-top: 16px;
-  padding: 0 32px;
 }
 
 .team-icon-link {
@@ -623,13 +618,16 @@ a {
   display: flex;
 }
 
+.partners-item:not(:last-child) {
+  margin-right: 30px;
+}
+
 .partners-link {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 170px;
   height: 90px;
-  margin-right: 30px;
   color: var(--social-link-color);
   border: 1px solid var(--social-link-color);
   border-radius: 4px;
